# play

./: README.md
electronics/HC-SR04/: Cargo.toml
electronics/HC-SR04/.cargo/: config.toml
electronics/HC-SR04/src/: main.rs
electronics/HC-SRO4/: Cargo.toml
electronics/HC-SRO4/.cargo/: config.toml
electronics/HC-SRO4/src/: main.rs
go/learn-tests/acceptance-tests/: go.mod  go.sum  greet_test.go
go/learn-tests/acceptance-tests/httpserver/: handler.go
go/learn-tests/array-slices/: go.mod  sum.go  sum_test.go
go/learn-tests/blogposts/: blogposts_test.go  go.mod
go/learn-tests/concurrency/: check_websites.go  check_websites_test.go
go/learn-tests/context/: context.go  context_test.go
go/learn-tests/di/: go.mod
go/learn-tests/hello-world/: hello.go  hello_test.go
go/learn-tests/http-server/: go.mod  server.go  server_test.go
go/learn-tests/integers/: adder_test.go
go/learn-tests/iteration/: go.mod  repeat.go  repeat_test.go
go/learn-tests/maps/: dictionary.go  dictionary_test.go
go/learn-tests/maths/: clockface.go  clockface_acceptance_test.go  clockface_test.go  go.mod  svgWriter.go
go/learn-tests/mocking/: countdown.go  countdown_test.go
go/learn-tests/pointers-errors/: go.mod  wallet.go  wallet_test.go
go/learn-tests/property-based/: go.mod  numeral.go  numeral_test.go
go/learn-tests/reflection/: reflection.go  reflection_test.go
go/learn-tests/select/: go.mod  racer.go  racer_test.go
go/learn-tests/structs-methods-and-interfaces/: shapes.go  shapes_test.go
go/learn-tests/sync/: 2  sync.go
rust/thebook/enums/src/: main.rs
(+6 files in other folders)
