[package]
name = "HC-SRO4"
version = "0.1.0"
edition = "2024"

[features]
# Default to DevKit
default = ["esp32"]
esp32 = []
esp32c3 = []

[dependencies]
esp-idf-svc = { version = "0.51", features = ["binstart"] }
esp-idf-hal = "0.45.2"
anyhow = "1.0.101"
log = "0.4"

[build-dependencies]
embuild = "0.33"
